Galleon
-------

Version 0.0.0 beta 12:
----------------------
1. Upgraded to JmDNS 1.0 RC2
2. Fixed some data bugs in various apps.
3. Updated project web pages.
4. Fixed album cover image bug.


Version 0.0.0 beta 11:
----------------------
Fixed email sorting.
Removed camera app.
Fixed memory leak that could cause TiVo reboots.
Added podcasting app.


Version 0.0.0 beta 10:
----------------------
Fixed email app.
Reset field values for table operations in configuration GUI.
Fixed music update title bug.
Fixed bug that caused beep sounds in GUI.


Version 0.0.0 beta 9:
---------------------
Fixed safe viewing area option.
Windows installation wizard.
Desktop app.
Improved support for online radio stations.
Auto restarts for server configuration changes.
Increased size of text caching.
Camera app.
Email app.
Playlists app.
Internet images app.
Random play for music folders.
New music play bar.
Support HME 1.2.0
Support Bananas 1.2.1
View photo option in photo app.
Rotate photo option in photo app.
iTunes app.
Moved artist web images to music player screen.


Version 0.0.0 beta 8:
---------------------
Added option to control safe viewing area for slideshows.
RSS reader.
Music organizer.
Fixed Shoutcast caching bugs.
Added optional HMO-like music player.


Version 0.0.0 beta 7:
---------------------
Added skinning support for images.
Added CLEAR button to exit any app.
Support streaming MP3 stations.
Support displaying streaming meta tags.
Shoutcast app.
Music player settings moved to its own menu item in configuration GUI.
Improved playlist parsing performance.


Version 0.0.0 beta 6:
---------------------
Fixed ToGo database startup error.
Music lyrics.
Support dotted directory names.
Went back to 1.4 JDK.
Artist web images.
Removed Winamp player as standalone app (now part of Music app code).
Added HME directory for non-Galleon HME apps.
Made ToGo a configurable app.
Network interface test wizard.
Support playing folders.