@@ -157,7 +157,7 @@ public class Shoutcast extends DefaultApplication {
             BText name = new BText(parent, 50, 4, parent.getWidth() - 40, parent.getHeight() - 4);
             name.setShadow(true);
             name.setFlags(RSRC_HALIGN_LEFT);
-            name.setValue(Tools.trim(StringUtils.capitalize(nameValue.getName().toLowerCase()), 40));
+            name.setValue(Tools.trim(StringUtils.capitalize(Tools.clean(nameValue.getName()).toLowerCase()), 40));
         }
 
     }
@@ -295,7 +295,7 @@ public class Shoutcast extends DefaultApplication {
             BText name = new BText(parent, 50, 4, parent.getWidth() - 40, parent.getHeight() - 4);
             name.setShadow(true);
             name.setFlags(RSRC_HALIGN_LEFT);
-            name.setValue(Tools.trim(nameFile.getName(), 40));
+            name.setValue(Tools.trim(Tools.clean(nameFile.getName()), 40));
         }
 
         public boolean handleKeyPress(int code, long rawcode) {
